Fixed overflow hubkut actions - mobile version

--- a/home/style.css
+++ b/home/style.css
@@ -793,8 +793,13 @@ body.darkTheme .swal-text {
   .mainActions {
     margin-block: 2rem;
   }
+
   .mainActions li { 
     padding-inline: 2rem;
+  }
+
+  .hubKutActions ul {
+    overflow-x: auto;
   }
 
   .repositores {
